--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-svg": "^15.7.1",
-    "expo-linear-gradient": "~13.0.2"
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-svg": "^15.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
