--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-svg": "^15.7.1"
   },
